Fix flexed label positioning on mobile devices

--- a/src/app/systelab-components/styles/default-theme/sass/systelab-components.scss
+++ b/src/app/systelab-components/styles/default-theme/sass/systelab-components.scss
@@ -84,4 +84,8 @@ html {
   flex: 1;
 }
 
+.slab-mh-ft {
+  max-height: fit-content;
+}
+
 // $primary-color: rgb(85, 174, 97);
